--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -1,15 +1,14 @@
 Package: devtEp
 Type: Package
-Title: devtools test package
-Version: 1.0
-Date: 2024-10-18
-Author: Yifan Yang
+Title: The devtEp package
+Version: 0.1
+Date: 2024-11-18
+Author: Yifan Yang, Xiaoqing Pan
 Maintainer: Yifan Yang <yfyang.86@hotmail.com>
-Description: TODO.
+Description: The devtEp package aims to identify cell type specific DNA methylation regions associated with phenotypes using RRBS data. It provides several essential features for the analysis of RRBS data.
 License: Apache License 2.0
 Imports: Rcpp (>= 1.0.12)
 LinkingTo: Rcpp, RcppEigen
-RoxygenNote: 7.2.3
 NeedsCompilation: yes
-Depends: R (>= 3.5.0)
-
+Depends: R (>= 4.0.0)
+RoxygenNote: 7.2.3
